get room by company
